--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=BookStore
 
 logging.level.org.springframework=DEBUG
+
+# Camel Configuration
+#camel.component.servlet.mapping.context-path=/camel/*
+camel.servlet.mapping.context-path=/camel/*
+server.port=3005
